--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -4,5 +4,8 @@
   "typeCheckingMode": "standard",
   "reportMissingImports": true,
   "reportMissingTypeStubs": false,
-  "pythonVersion": "3.12"
+"pythonVersion": "3.12",
+"extraPaths": [
+    "./src"
+]
 }
