--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,31 +6,31 @@ on:
   pull_request:
     branches: [main]
 
-jobs:
-  domain-tests:
-    runs-on: ubuntu-latest
+# jobs:
+#   domain-tests:
+#     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        python-version: ["3.12"]
+#     strategy:
+#       matrix:
+#         python-version: ["3.12"]
 
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+#     steps:
+#       - name: Checkout repository
+#         uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: ${{ matrix.python-version }}
+#       - name: Set up Python
+#         uses: actions/setup-python@v5
+#         with:
+#           python-version: ${{ matrix.python-version }}
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements/requirements_dev.txt
+#       - name: Install dependencies
+#         run: |
+#           python -m pip install --upgrade pip
+#           pip install -r requirements/requirements_dev.txt
 
-      - name: Run domain tests with coverage
-        run: |
-          pytest \
-            --cov=src/domain \
-            --cov-report=term-missing \
-            --cov-fail-under=100
+#       - name: Run domain tests with coverage
+#         run: |
+#           pytest \
+#             --cov=src/domain \
+#             --cov-report=term-missing \
+#             --cov-fail-under=100
